--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.3.0",
     "fluent-ffmpeg": "^2.1.2",
+    "usetube": "^2.1.0",
     "ytdl-core": "^4.8.2"
   }
 }
