--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ffmpeg": "0.0.4",
     "ffmpeg-static": "^4.4.0",
     "fluent-ffmpeg": "^2.1.2",
+    "soundcloud-downloader": "^1.0.0",
     "usetube": "^2.1.0",
-    "ytdl-core": "^4.8.2"
+    "ytdl-core": "^4.8.3"
   }
 }
